Font Names missing in Windows 10 #75028

Closed
opened 2020-03-23 10:24:19 +01:00 by Aranzazu Hurtado · 14 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Intel(R) UHD Graphics 630 Intel 4.5.0 - Build 26.20.100.7262

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: 375c7dc4ca

Short description of error
The names of the fonts in the Blender File View (route: C/Windows/Fonts) displays numbers, not the name of the font.

Blender_Fonts_error.PNG

If I do a search by name it doesn't show anything:

Blender_Fonts_error2.PNG

And I have the font installed on Windows:

Blender_Fonts_error3.PNG

Exact steps for others to reproduce the error
In Blender, when I try to find a font for a Text object, there's no way I can find any font but by the thumbnail, all the names have been replaced by a number. How can I find f.e. the Futura or any other font when they are very similar to each other just by looking at the thumbnails? I think this it's a bug because it didn't happen before in the previous versions.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Intel(R) UHD Graphics 630 Intel 4.5.0 - Build 26.20.100.7262 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: `375c7dc4ca` **Short description of error** The names of the fonts in the Blender File View (route: C/Windows/Fonts) displays numbers, not the name of the font. ![Blender_Fonts_error.PNG](https://archive.blender.org/developer/F8424567/Blender_Fonts_error.PNG) If I do a search by name it doesn't show anything: ![Blender_Fonts_error2.PNG](https://archive.blender.org/developer/F8424566/Blender_Fonts_error2.PNG) And I have the font installed on Windows: ![Blender_Fonts_error3.PNG](https://archive.blender.org/developer/F8424565/Blender_Fonts_error3.PNG) **Exact steps for others to reproduce the error** In Blender, when I try to find a font for a Text object, there's no way I can find any font but by the thumbnail, all the names have been replaced by a number. How can I find f.e. the *Futura* or any other font when they are very similar to each other just by looking at the thumbnails? I think this it's a bug because it didn't happen before in the previous versions.

Added subscriber: @zutxita

Added subscriber: @zutxita

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

The Windows Explorer doesn't display the filenames, it shows the name from the metadata of the TrueType or OpenType font. Please right click on the file in the Windows Explorer in C:\Windows\Fonts, open the Properties and check what the actual filename is. Quite likely it's the name that Blender displays.

The Windows Explorer doesn't display the filenames, it shows the name from the metadata of the TrueType or OpenType font. Please right click on the file in the Windows Explorer in `C:\Windows\Fonts`, open the *Properties* and check what the actual filename is. Quite likely it's the name that Blender displays.

Ok, the name of that font was tt0140m_.ttf, there's no way to implement a search by name of the file? I know is the futura, and the font name is futura book (or whatever) but I coudn't find it because of that, I can't go to every font and search which name is in the properties in the windows/font panel, It's kinda insane. What is the reason of using the metadata name? Can be implemented other kinds of names? at least in the search section. I can't believe why it's so hard for blender to implement the fonts search properly, (as any other software out there) maybe in blender 2040...

Ok, the name of that font was *tt0140m_.ttf*, there's no way to implement a search by name of the file? I know is the futura, and the font name is futura book (or whatever) but I coudn't find it because of that, I can't go to every font and search which name is in the properties in the windows/font panel, It's kinda insane. What is the reason of using the metadata name? Can be implemented other kinds of names? at least in the search section. I can't believe why it's so hard for blender to implement the fonts search properly, (as any other software out there) maybe in blender 2040...

Actually, I've tried other search of other font, in this case: "Montserrat" and it hasn't found it, not even putting the name that shows in the windows properties.

Blender_Fonts_error4.PNG

Blender_Fonts_error5.PNG

Maybe because it's a family and it's inside a folder (that don't exist in blender, or blender doesn't find it but windows does?)

In the Windows directory it shows this:

C:\Windows\Fonts\Montserrat

Blender_Fonts_error6.PNG

It's like a pack inside the directory fonts.

If I put that route in the Blender File View, it wants to create new folder, it doesn't recognize it.

It's getting trickier and trickier...

Actually, I've tried other search of other font, in this case: "*Montserrat*" and it hasn't found it, not even putting the name that shows in the windows properties. ![Blender_Fonts_error4.PNG](https://archive.blender.org/developer/F8424918/Blender_Fonts_error4.PNG) ![Blender_Fonts_error5.PNG](https://archive.blender.org/developer/F8424920/Blender_Fonts_error5.PNG) Maybe because it's a family and it's inside a folder (that don't exist in blender, or blender doesn't find it but windows does?) In the Windows directory it shows this: C:\Windows\Fonts\Montserrat ![Blender_Fonts_error6.PNG](https://archive.blender.org/developer/F8424939/Blender_Fonts_error6.PNG) It's like a pack inside the directory fonts. If I put that route in the Blender File View, it wants to create new folder, it doesn't recognize it. It's getting trickier and trickier...

Changed status from 'Needs User Info' to: 'Archived'

Changed status from 'Needs User Info' to: 'Archived'
Robert Guetzkow self-assigned this 2020-03-23 13:50:25 +01:00

Blender isn't doing anything unusual, it simply displays the actual filenames. Windows tries to improve the user experience for cases where the filename is non-descriptive. It also displays fonts that aren't actually stored in C:\Windows\Fonts , but installed for a specific user in C:\Users\[your username]\AppData\Local\Microsoft\Windows\Fonts.

While I agree that this would be a nice feature, it's not a bug in Blender. I understand that the current implementation can be inconvenient. Perhaps this will be addressed in the future along with other improvements to Blender's font handling.

I'll be closing this ticket since this is a feature request.

Blender isn't doing anything unusual, it simply displays the actual filenames. Windows tries to improve the user experience for cases where the filename is non-descriptive. It also displays fonts that aren't actually stored in `C:\Windows\Fonts` , but installed for a specific user in `C:\Users\[your username]\AppData\Local\Microsoft\Windows\Fonts`. While I agree that this would be a nice feature, it's not a bug in Blender. I understand that the current implementation can be inconvenient. Perhaps this will be addressed in the future along with other improvements to Blender's font handling. I'll be closing this ticket since this is a feature request.

So what do we do to use a font in Blender? How do I have to do? Copy the font to a folder outside the windows fonts? not use the installed fonts? Are u kiddin' me? This is 2020...

So what do we do to use a font in Blender? How do I have to do? Copy the font to a folder outside the windows fonts? not use the installed fonts? Are u kiddin' me? This is 2020...

You need to know two things:

  • The actual filename of the font
  • The location where the font file is stored

In order to do this, open your Windows Explorer and navigate to C:\Windows\Fonts. Right-click on the font you would like to use and select Properties. There you will find the filename and the location where the font file is stored. In case of your Montserrat font the filename is Montserrat-Medium.ttf and the location is C:\Users\Arantxa\AppData\Local\Microsoft\Windows\Fonts. Now you can open Blender's font selection dialog, change the directory/folder to the location where the font is stored and search for the filename.

Blender is running on Linux, macOS and Windows. The special behavior of the Windows Explorer for the Fonts directory exists only on Windows. Since Blender is an open source project, its development is community-driven and depends on the contributions of volunteers. There simply hasn't been any developer (yet) who has had time to address the very specific, platform-dependent behavior. Please check Blender's wiki if you would like to get involved and help to implement this feature.

You need to know two things: - The actual filename of the font - The location where the font file is stored In order to do this, open your Windows Explorer and navigate to `C:\Windows\Fonts`. Right-click on the font you would like to use and select *Properties*. There you will find the filename and the location where the font file is stored. In case of your Montserrat font the filename is `Montserrat-Medium.ttf` and the location is `C:\Users\Arantxa\AppData\Local\Microsoft\Windows\Fonts`. Now you can open Blender's font selection dialog, change the directory/folder to the location where the font is stored and search for the filename. Blender is running on Linux, macOS and Windows. The special behavior of the Windows Explorer for the Fonts directory exists only on Windows. Since Blender is an open source project, its development is community-driven and depends on the contributions of volunteers. There simply hasn't been any developer (yet) who has had time to address the very specific, platform-dependent behavior. Please check [Blender's wiki ](https://wiki.blender.org/wiki/Main_Page) if you would like to get involved and help to implement this feature.

I can't believe it, but now at least I can use a installed font on Windows... wtf

And why does it show the name here? And not in the other route?

Blender_Fonts_error7.PNG

Well, thanks a lot @rjg

At least now I can search for a font

I can't believe it, but now at least I can use a installed font on Windows... wtf And why does it show the name here? And not in the other route? ![Blender_Fonts_error7.PNG](https://archive.blender.org/developer/F8424989/Blender_Fonts_error7.PNG) Well, thanks a lot @rjg At least now I can search for a font

@zutxita The fonts from your last screenshot have proper filenames that include the name of the font family, as you would expect. As I've said before, Blender simply displays the filename. In this case the filename for the Futura LT Book font is Future LT Book.ttf. Some of your installed fonts have a strange filenames, like 111118.ttf which Blender displays as such. Perhaps you've downloaded a collection of font files where they didn't give them descriptive filenames? Apparently they've just enumerated them and used that as filename instead of using the actual font name.

@zutxita The fonts from your last screenshot have proper filenames that include the name of the font family, as you would expect. As I've said before, Blender simply displays the filename. In this case the filename for the Futura LT Book font is `Future LT Book.ttf`. Some of your installed fonts have a strange filenames, like `111118.ttf` which Blender displays as such. Perhaps you've downloaded a collection of font files where they didn't give them descriptive filenames? Apparently they've just enumerated them and used that as filename instead of using the actual font name.

This issue was referenced by 8aa1c0a326

This issue was referenced by 8aa1c0a326a838528470e79abad3abec343d1c9f
Member

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75028
No description provided.